<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText_Phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.13" />

    <EditText
        android:id="@+id/editText_VerificationCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/verification_code"
        android:inputType="textWebPassword"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Phone" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/login"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/editText_VerificationCode"
        app:layout_constraintStart_toStartOf="@+id/editText_VerificationCode"
        app:layout_constraintTop_toBottomOf="@+id/editText_Phone" />

    <Button
        android:id="@+id/button_resend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/resend_code"
        android:background="@color/colorPrimary"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/button_verify"
        app:layout_constraintStart_toStartOf="@+id/button_verify"
        app:layout_constraintTop_toBottomOf="@+id/button_verify" />

    <Button
        android:id="@+id/button_verify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/verify"
        android:background="@color/colorPrimary"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/editText_VerificationCode"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText_VerificationCode"
        app:layout_constraintTop_toBottomOf="@+id/editText_VerificationCode" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="96dp"
        android:layout_height="93dp"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon" />

</androidx.constraintlayout.widget.ConstraintLayout>
